Add support for basic activity recording
